...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAlignment="center"
            android:textSize="@dimen/standard_text_size"
            app:layout_constraintBottom_toBottomOf="@id/item_slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="@id/item_slider"
            tools:text="100 kg" />

...
