...
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.magiclane.sdk.core.GemSurfaceView
            android:id="@+id/gem_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
...
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/big_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/landmark_info">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/projections_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
...
