<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/projection_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:textColor="@color/text_color"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:textColor="@color/text_color"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintTop_toBottomOf="@id/projection_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>